--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -2,9 +2,12 @@
     font-family: serif;
     font-size: 2.25rem;
     font-weight: normal;
-    color: gray;
+    color: black;
     border: 2px solid black;
     padding: 24px;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .infoCardCallActionContainer :global(.vtex-button) {
@@ -21,4 +24,8 @@
 
 .infoCardContainer--vintage {
     background-color: #EDCFD1
-  }
+}
+
+.infoCardContainer--metal {
+    background-color: #464444
+}
