--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -14,6 +14,9 @@
     color: white;
     background-color: white;
     border: transparent;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
@@ -23,9 +26,18 @@
 }
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
+    background-color: #EDCFD1;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .infoCardContainer--metal {
     background-color: #e1e1e1
+}
+
+.infoCardCallActionContainer :global(.vtex-image) {
+    color: white;
+    background-color: white;
+    border: transparent;
 }
