--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -30,7 +30,7 @@
     background-color: #e1e1e1
 }
 
-.infoCardImageContainer {
+.infoCardContainer--image {
     color: white;
     background-color: white;
     border: transparent;
