--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -30,7 +30,13 @@
     background-color: #e1e1e1
 }
 
-.infoCardContainer--image {
+.infoCardImageContainer {
+    color: white;
+    background-color: white;
+    border: transparent;
+}
+
+.infoCardImage {
     color: white;
     background-color: white;
     border: transparent;
