--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -14,16 +14,28 @@
     color: white;
     background-color: grey;
     border: transparent;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
     background-color: white;
     border: transparent;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .infoCardContainer--vintage {
-    background-color: #EDCFD1
+    background-color: #EDCFD1;
+    color: white;
+    background-color: grey;
+    border: transparent;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .infoCardContainer--metal {
