--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -5,36 +5,36 @@
     color: black;
     border: 2px solid black;
     padding: 24px;
-    max-width: 1260px;
-    margin: 0 auto;
-    padding: 0;
-}
-
-.infoCardCallActionContainer :global(.vtex-button) {
+   }
+    
+   .infoCardCallActionContainer :global(.vtex-button) {
     color: white;
-    background-color: grey;
+    background-color: gray;
     border: transparent;
-    max-width: 1260px;
-    margin: 0 auto;
-    padding: 0;
-}
-
-.infoCardCallActionContainer :global(.vtex-button):hover {
+   }
+    
+   .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
     background-color: white;
     border: transparent;
+   }
+    
+   .infoCardContainer--metal {
+    background-color: #e1e1e1;
+   }
+    
+   .infoCardContainer {
     max-width: 1260px;
     margin: 0 auto;
-    padding: 0;
-}
-
-.infoCardContainer--vintage {
-    background-color: #EDCFD1;
-    color: white;
-    background-color: grey;
-    border: transparent;
-}
-
-.infoCardContainer--metal {
-    background-color: #e1e1e1;
-}
+    padding: 0px;
+   }
+    
+   .infoCardContainer--vintage {
+    background-color: #edcfd1;
+   }
+    
+   .infoCardImage {
+    background-color: white;
+    margin: 0 auto;
+    padding: 0px;
+   }
